--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2179151, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2192574, 'weight': 8}]}\n"
+      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7405, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2153362, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2145416, 'weight': 8}]}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_2a3505e109828c0326a108a27070a6c6 {\n",
+       "                #map_40d90a01596ef892f2598bae82f565bd {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,14 +108,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_2a3505e109828c0326a108a27070a6c6&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_40d90a01596ef892f2598bae82f565bd&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_2a3505e109828c0326a108a27070a6c6 = L.map(\n",
-       "                &quot;map_2a3505e109828c0326a108a27070a6c6&quot;,\n",
+       "            var map_40d90a01596ef892f2598bae82f565bd = L.map(\n",
+       "                &quot;map_40d90a01596ef892f2598bae82f565bd&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_da352375bf73d5a2b3e6b830e666251a = L.tileLayer(\n",
+       "            var tile_layer_ea6d22c762e4a284bdb0f8088b707cfb = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_da352375bf73d5a2b3e6b830e666251a.addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
+       "            tile_layer_ea6d22c762e4a284bdb0f8088b707cfb.addTo(map_40d90a01596ef892f2598bae82f565bd);\n",
        "        \n",
        "    \n",
-       "            var marker_56f214d02a64547ac19193f3a19c0b8b = L.marker(\n",
+       "            var marker_1b8cd79d250436df4b6d486ecddb3459 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
+       "            ).addTo(map_40d90a01596ef892f2598bae82f565bd);\n",
        "        \n",
        "    \n",
-       "        var popup_5971ac31c41d268bef69461936756bef = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_34b398c928bec146bfb6c09a3e4120a4 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_91a386042393cb512d2c04f77c7e3445 = $(`&lt;div id=&quot;html_91a386042393cb512d2c04f77c7e3445&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_5971ac31c41d268bef69461936756bef.setContent(html_91a386042393cb512d2c04f77c7e3445);\n",
+       "                var html_21cd533c963716e303f77f41045c142b = $(`&lt;div id=&quot;html_21cd533c963716e303f77f41045c142b&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_34b398c928bec146bfb6c09a3e4120a4.setContent(html_21cd533c963716e303f77f41045c142b);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_56f214d02a64547ac19193f3a19c0b8b.bindPopup(popup_5971ac31c41d268bef69461936756bef)\n",
+       "        marker_1b8cd79d250436df4b6d486ecddb3459.bindPopup(popup_34b398c928bec146bfb6c09a3e4120a4)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_a4297a5192075bb45d2969191f6a18e3 = L.marker(\n",
+       "            var marker_8399229a5d0ae8c28dcd64e31d314b90 = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
+       "            ).addTo(map_40d90a01596ef892f2598bae82f565bd);\n",
        "        \n",
        "    \n",
-       "        var popup_1bc683284f89106eba2d25be3694776d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_e8d603be5a3491d82a956e9a5a31911d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_b6e2a25df8add70b9069f1894310d76a = $(`&lt;div id=&quot;html_b6e2a25df8add70b9069f1894310d76a&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_1bc683284f89106eba2d25be3694776d.setContent(html_b6e2a25df8add70b9069f1894310d76a);\n",
+       "                var html_d848e06f10a81b49a78ed1f41e41641d = $(`&lt;div id=&quot;html_d848e06f10a81b49a78ed1f41e41641d&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_e8d603be5a3491d82a956e9a5a31911d.setContent(html_d848e06f10a81b49a78ed1f41e41641d);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_a4297a5192075bb45d2969191f6a18e3.bindPopup(popup_1bc683284f89106eba2d25be3694776d)\n",
+       "        marker_8399229a5d0ae8c28dcd64e31d314b90.bindPopup(popup_e8d603be5a3491d82a956e9a5a31911d)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_f0b2416695963fb3ecc9a4fb25383a61 = L.marker(\n",
+       "            var marker_c60ba3bb257b0ba9bcaa8e0cd1c19516 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
+       "            ).addTo(map_40d90a01596ef892f2598bae82f565bd);\n",
        "        \n",
        "    \n",
-       "        var popup_d64476f4beabb3f37087838a5ed9a086 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_3dbe97bbd5d5c9084a2e5ed79a0d1473 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_668813e7f3b5bafe9c66c3adf0a9b799 = $(`&lt;div id=&quot;html_668813e7f3b5bafe9c66c3adf0a9b799&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_d64476f4beabb3f37087838a5ed9a086.setContent(html_668813e7f3b5bafe9c66c3adf0a9b799);\n",
+       "                var html_87deee0a39242d3535e26fbf2bf2776e = $(`&lt;div id=&quot;html_87deee0a39242d3535e26fbf2bf2776e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_3dbe97bbd5d5c9084a2e5ed79a0d1473.setContent(html_87deee0a39242d3535e26fbf2bf2776e);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_f0b2416695963fb3ecc9a4fb25383a61.bindPopup(popup_d64476f4beabb3f37087838a5ed9a086)\n",
+       "        marker_c60ba3bb257b0ba9bcaa8e0cd1c19516.bindPopup(popup_3dbe97bbd5d5c9084a2e5ed79a0d1473)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x20e84281810>"
+       "<folium.folium.Map at 0x151818a3ed0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}\n"
+      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7405, 'weight': 1}\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9bc09ae91e44165974751d70275464f",
+       "model_id": "385ce96f37ed4cdb82329b9292cfa7d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +482,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,13 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a5b85c3017f44e0aee343537381e8c5",
+       "model_id": "191bfc22a6e34df68c6442dff1de5d66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,7 +511,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,13 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c43644b0f75b43a3ba503500034a57bf",
+       "model_id": "f0ddf78f7877483f8510dd284f40dff8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -539,7 +539,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Calculate south facade\n",
+    "\n",
+    "southPolygons = []\n",
+    "\n",
+    "for mesh in walls:\n",
+    "    southVertices = []\n",
+    "    for i in range(0, len(mesh.vertices), 3):\n",
+    "        if mesh.vertices[i+1] == mesh.vertices[1::3].min():\n",
+    "            southVertices.append([mesh.vertices[i], mesh.vertices[i+1], mesh.vertices[i+2]])\n",
+    "    southPolygons.append(southVertices)\n",
+    "\n",
+    "#Calculate west facade\n",
+    "\n",
+    "#Calculate north facade\n",
+    "\n",
+    "#Calculate east facade"
+   ]
   }
  ],
  "metadata": {
