--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_db3d74cf64229d9292982c9c8f2b2c5b {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_db3d74cf64229d9292982c9c8f2b2c5b&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_db3d74cf64229d9292982c9c8f2b2c5b = L.map(\n",
+       "                &quot;map_db3d74cf64229d9292982c9c8f2b2c5b&quot;,\n",
+       "                {\n",
+       "                    center: [47.63404846191406, 8.694016456604004],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 20,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_2bf063826aebaff6b553b9bd90229b8e = L.tileLayer(\n",
+       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_2bf063826aebaff6b553b9bd90229b8e.addTo(map_db3d74cf64229d9292982c9c8f2b2c5b);\n",
+       "        \n",
+       "    \n",
+       "            var marker_4a0662cd1371dd2873777053748872b3 = L.marker(\n",
+       "                [47.63404846191406, 8.694016456604004],\n",
+       "                {}\n",
+       "            ).addTo(map_db3d74cf64229d9292982c9c8f2b2c5b);\n",
+       "        \n",
+       "    \n",
+       "        var popup_f1d7fc49355a14e95ed276c8b5e4e963 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_a1aa8b6f78b7dff42a6a287ad2aad7c0 = $(`&lt;div id=&quot;html_a1aa8b6f78b7dff42a6a287ad2aad7c0&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_f1d7fc49355a14e95ed276c8b5e4e963.setContent(html_a1aa8b6f78b7dff42a6a287ad2aad7c0);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_4a0662cd1371dd2873777053748872b3.bindPopup(popup_f1d7fc49355a14e95ed276c8b5e4e963)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    \n",
+       "            var marker_18ebbe8e655739efe2c1a1ff0d4eff40 = L.marker(\n",
+       "                [47.634090423583984, 8.694190979003906],\n",
+       "                {}\n",
+       "            ).addTo(map_db3d74cf64229d9292982c9c8f2b2c5b);\n",
+       "        \n",
+       "    \n",
+       "        var popup_e59812033bd893bcf7d40bd4848a06e2 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_85bf2e14be07ecc00eb167f0097dc169 = $(`&lt;div id=&quot;html_85bf2e14be07ecc00eb167f0097dc169&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_e59812033bd893bcf7d40bd4848a06e2.setContent(html_85bf2e14be07ecc00eb167f0097dc169);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_18ebbe8e655739efe2c1a1ff0d4eff40.bindPopup(popup_e59812033bd893bcf7d40bd4848a06e2)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    \n",
+       "            var marker_2ede2c1b3c2434ce060e8faf2491e780 = L.marker(\n",
+       "                [47.63389205932617, 8.694341659545898],\n",
+       "                {}\n",
+       "            ).addTo(map_db3d74cf64229d9292982c9c8f2b2c5b);\n",
+       "        \n",
+       "    \n",
+       "        var popup_95fa43f18d61e48c4202cfb9e0607883 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_0227c2d78fab56f2813acdfd30f5d14e = $(`&lt;div id=&quot;html_0227c2d78fab56f2813acdfd30f5d14e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_95fa43f18d61e48c4202cfb9e0607883.setContent(html_0227c2d78fab56f2813acdfd30f5d14e);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_2ede2c1b3c2434ce060e8faf2491e780.bindPopup(popup_95fa43f18d61e48c4202cfb9e0607883)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x1dc0dfe1110>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import folium\n",
     "\n",
@@ -76,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude: 47.63404846191406 Longitude: 8.694016456604004\n",
+      "Found 6 KML files ['swissBUILDINGS3D\\\\1031-44\\\\1031-44.kml', 'swissBUILDINGS3D\\\\1032-33\\\\1032-33.kml', 'swissBUILDINGS3D\\\\1032-34\\\\1032-34.kml', 'swissBUILDINGS3D\\\\1051-22\\\\1051-22.kml', 'swissBUILDINGS3D\\\\1052-11\\\\1052-11.kml', 'swissBUILDINGS3D\\\\1052-12\\\\1052-12.kml']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -179,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,9 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bca605ad5a8c43759398e8bed5268df4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Draw the whole building\n",
     "from ipygany import Scene\n",
@@ -264,9 +437,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2e747a1ef864b23ac5d5222d44ccbb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "walls = [mesh for mesh in meshes if (mesh.vertices[2::3].max()- mesh.vertices[2::3].min())> 5]\n",
     "\n",
@@ -276,9 +465,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6fa1d1bbeab43a9a61b261650e1dbb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "roof = [mesh for mesh in meshes if not (mesh.vertices[2::3].max()- mesh.vertices[2::3].min())> 5]\n",
     "\n",
@@ -288,16 +493,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad7242157c174973804bf07f236019df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_triangles = len(walls[0].vertices)/9\n",
     "ns_walls, we_walls = [], []\n",
-    "ns_vertices = []\n",
-    "ns_faces = []\n",
-    "we_vertices = []\n",
-    "we_faces = []\n",
+    "ns_vertices, we_vertices = [], []\n",
+    "ns_faces, we_faces = [], []\n",
     "triangles = []\n",
     "ns_index=0\n",
     "we_index=0\n",
@@ -329,6 +548,13 @@
     "sceneNS =Scene(we_walls)\n",
     "sceneNS\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
