Added comment for calculation of facades

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -408,13 +408,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bca605ad5a8c43759398e8bed5268df4",
+       "model_id": "ecc15ad0ec5e4a33909aaff5d499af4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +422,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,13 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2e747a1ef864b23ac5d5222d44ccbb1",
+       "model_id": "6153ce5ae1124925865b3a2b281287a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +451,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,13 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6fa1d1bbeab43a9a61b261650e1dbb6",
+       "model_id": "31297b7bc9cf432ab2c8a47e539560f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +479,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,13 +493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad7242157c174973804bf07f236019df",
+       "model_id": "f7a45353d4664bfd9270b86edc04dc6b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +507,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,10 +551,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.23208126, 7.5382614, -3.53794, 5.9235096, -3.53794, 5.9235096, 0.23208126, 7.5382614, -3.53794, 5.9235096, 0.23208126, 7.5382614, -2.1757424, 2.744558, -2.1757424, 2.744558, -5.4050355, 1.361165, -2.1757424, 2.744558, -5.4050355, 1.361165, -5.4050355, 1.361165, -1.5932719, -7.5392604, 5.4050426, -4.5410995, 5.4050426, -4.5410995, -1.5932719, -7.5392604, -1.5932719, -7.5392604, 5.4050426, -4.5410995]\n",
+      "[5.4050426, -4.5410995, 5.4050426, -4.5410995, 3.954176, -1.1537193, 3.954176, -1.1537193, 0.23208126, 7.5382614, 0.23208126, 7.5382614, 5.4050426, -4.5410995, 0.23208126, 7.5382614, 3.954176, -1.1537193, -3.53794, 5.9235096, -2.1757424, 2.744558, -2.1757424, 2.744558, -3.53794, 5.9235096, -2.1757424, 2.744558, -3.53794, 5.9235096, -5.4050355, 1.361165, -5.4050355, 1.361165, -3.0441387, -4.1518803, -3.0441387, -4.1518803, -1.5932719, -7.5392604, -1.5932719, -7.5392604, -5.4050355, 1.361165, -1.5932719, -7.5392604, -3.0441387, -4.1518803]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wallsNS2D, wallsWE2D = [], []\n",
+    "for i in range(len(ns_walls[0].vertices)):\n",
+    "    if not i % 3 == 2:\n",
+    "        wallsNS2D.append(ns_walls[0].vertices[i])\n",
+    "\n",
+    "for i in range(len(we_walls[0].vertices)):\n",
+    "    if not i % 3 == 2:\n",
+    "        wallsWE2D.append(we_walls[0].vertices[i])\n",
+    "\n",
+    "\n",
+    "print(wallsNS2D)\n",
+    "print(wallsWE2D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.7700212 -1.6147518\n",
+      "0.23208126 7.5382614 -3.53794 5.9235096 -3.53794 5.9235096\n",
+      "\n",
+      "-3.7700212 -1.6147518\n",
+      "0.23208126 7.5382614 -3.53794 5.9235096 0.23208126 7.5382614\n",
+      "\n",
+      "-3.229293 -1.383393\n",
+      "-2.1757424 2.744558 -2.1757424 2.744558 -5.4050355 1.361165\n",
+      "\n",
+      "-3.229293 -1.383393\n",
+      "-2.1757424 2.744558 -5.4050355 1.361165 -5.4050355 1.361165\n",
+      "\n",
+      "6.9983144 2.9981608\n",
+      "-1.5932719 -7.5392604 5.4050426 -4.5410995 5.4050426 -4.5410995\n",
+      "\n",
+      "6.9983144 2.9981608\n",
+      "-1.5932719 -7.5392604 -1.5932719 -7.5392604 5.4050426 -4.5410995\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorsNS=[]\n",
+    "vectorsWE=[]\n",
+    "for i in range(0, len(wallsNS2D), 6):\n",
+    "    x1, y1, x2, y2, x3, y3 = wallsNS2D[i], wallsNS2D[i+1], wallsNS2D[i+2], wallsNS2D[i+3], wallsNS2D[i+4], wallsNS2D[i+5]\n",
+    "    if (x1 != x2):\n",
+    "        dx = x2-x1\n",
+    "        dy = y2-y1\n",
+    "    else:\n",
+    "        dx = x3-x1\n",
+    "        dy = y3-y1\n",
+    "    vectorsNS.append(dx, dy)\n",
+    "    \n",
+    "    print(x1, y1, x2, y2, x3, y3)\n",
+    "    print(\"\")\n",
+    "    \n",
+    "for i in range(0, len(wallsWE2D), 6):\n",
+    "    x1, y1, x2, y2, x3, y3 = wallsWE2D[i], wallsWE2D[i+1], wallsWE2D[i+2], wallsWE2D[i+3], wallsWE2D[i+4], wallsWE2D[i+5]\n",
+    "    if (x1 != x2):\n",
+    "        dx = x2-x1\n",
+    "        dy = y2-y1\n",
+    "    else:\n",
+    "        dx = x3-x1\n",
+    "        dy = y3-y1\n",
+    "    #print (dx, dy)\n",
+    "\n",
+    "    #print(x1, y1, x2, y2, x3, y3)\n",
+    "    #print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Strecke des Dreiecks -> Vektor mit positivem y-Wert von Punkt x1, y1 Vergleich mit jeder längsten Strecke jedess Dreieck"
+   ]
   },
   {
    "cell_type": "markdown",
