Added case for 0 and infinity

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -770,7 +770,12 @@
     "plt.subplot(1,2,1)\n",
     "for i in range(len(vectorsNS)):\n",
     "    x1, y1, dx, dy = vectorsNS[i]\n",
-    "    vector90= -dx/dy\n",
+    "    if dy==0:\n",
+    "        vector90=0\n",
+    "    elif dx==0:\n",
+    "        vector90=1000 #arbitrary large number, due to infinite slope\n",
+    "    else:\n",
+    "        vector90= -dx/dy\n",
     "    xmid, ymid = x1+dx/2, y1+dy/2\n",
     "    straight = (vector90, ymid - vector90*xmid)\n",
     "    straightmax = (vector90, (y1+dy)- vector90*(x1+dx)-0.02)\n",
@@ -838,7 +843,12 @@
     "plt.subplot(1,2,2)\n",
     "for i in range(len(vectorsWE)):\n",
     "    x1, y1, dx, dy = vectorsWE[i]\n",
-    "    vector90= -dx/dy\n",
+    "    if dy==0:\n",
+    "        vector90=0\n",
+    "    elif dx==0:\n",
+    "        vector90=1000 #arbitrary large number, due to infinite slope\n",
+    "    else:\n",
+    "        vector90= -dx/dy\n",
     "    xmid, ymid = x1+dx/2, y1+dy/2\n",
     "    straight = (vector90, ymid - vector90*xmid)\n",
     "    straightmax = (vector90, (y1+dy)- vector90*(x1+dx)+0.02)\n",
