Tried implementing panda3d

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -86,7 +86,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_7e3741e3bb8ea6dd609ac451eda75f41 {\n",
+       "                #map_db836188a7f065b2c38e97d0546e9fbb {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -100,14 +100,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_7e3741e3bb8ea6dd609ac451eda75f41&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_db836188a7f065b2c38e97d0546e9fbb&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_7e3741e3bb8ea6dd609ac451eda75f41 = L.map(\n",
-       "                &quot;map_7e3741e3bb8ea6dd609ac451eda75f41&quot;,\n",
+       "            var map_db836188a7f065b2c38e97d0546e9fbb = L.map(\n",
+       "                &quot;map_db836188a7f065b2c38e97d0546e9fbb&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -121,73 +121,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_40740fd33cae2434866e695cbdae69d6 = L.tileLayer(\n",
+       "            var tile_layer_9b6388a9dcf9547f51fe47ac6d86c9b0 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_40740fd33cae2434866e695cbdae69d6.addTo(map_7e3741e3bb8ea6dd609ac451eda75f41);\n",
+       "            tile_layer_9b6388a9dcf9547f51fe47ac6d86c9b0.addTo(map_db836188a7f065b2c38e97d0546e9fbb);\n",
        "        \n",
        "    \n",
-       "            var marker_79e34dec412803cfb1ec5cd72280ed5e = L.marker(\n",
+       "            var marker_0b7ad9d1e76b61d3d081009c54e762f2 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_7e3741e3bb8ea6dd609ac451eda75f41);\n",
+       "            ).addTo(map_db836188a7f065b2c38e97d0546e9fbb);\n",
        "        \n",
        "    \n",
-       "        var popup_5eefca7b63ad0cef86da11e3a04abb74 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_43b1e71a318ab18d143ce5712a8dc6e8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_975b93be5fb178612b84920119695a3f = $(`&lt;div id=&quot;html_975b93be5fb178612b84920119695a3f&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_5eefca7b63ad0cef86da11e3a04abb74.setContent(html_975b93be5fb178612b84920119695a3f);\n",
+       "                var html_b2d3054991d5fbf54513104794289e52 = $(`&lt;div id=&quot;html_b2d3054991d5fbf54513104794289e52&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_43b1e71a318ab18d143ce5712a8dc6e8.setContent(html_b2d3054991d5fbf54513104794289e52);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_79e34dec412803cfb1ec5cd72280ed5e.bindPopup(popup_5eefca7b63ad0cef86da11e3a04abb74)\n",
+       "        marker_0b7ad9d1e76b61d3d081009c54e762f2.bindPopup(popup_43b1e71a318ab18d143ce5712a8dc6e8)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_05b60cdde0e52b61a2239e02698074a1 = L.marker(\n",
+       "            var marker_b3bb77fa30e17fe38f99a1c2c90701f2 = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_7e3741e3bb8ea6dd609ac451eda75f41);\n",
+       "            ).addTo(map_db836188a7f065b2c38e97d0546e9fbb);\n",
        "        \n",
        "    \n",
-       "        var popup_8dc8a86806c8d1b4d5b7ce00053262ef = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_3b0c1495ee81a69451d948f8570e9643 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_67572f467c8bff70f499626ca38b273d = $(`&lt;div id=&quot;html_67572f467c8bff70f499626ca38b273d&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_8dc8a86806c8d1b4d5b7ce00053262ef.setContent(html_67572f467c8bff70f499626ca38b273d);\n",
+       "                var html_d83068d279b1a9316e5c461b3fe95a14 = $(`&lt;div id=&quot;html_d83068d279b1a9316e5c461b3fe95a14&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_3b0c1495ee81a69451d948f8570e9643.setContent(html_d83068d279b1a9316e5c461b3fe95a14);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_05b60cdde0e52b61a2239e02698074a1.bindPopup(popup_8dc8a86806c8d1b4d5b7ce00053262ef)\n",
+       "        marker_b3bb77fa30e17fe38f99a1c2c90701f2.bindPopup(popup_3b0c1495ee81a69451d948f8570e9643)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_66c51bfc8a0e0ce3b74cc4da3f0e58ba = L.marker(\n",
+       "            var marker_a63b28d147b26f7bea724448a88c3da8 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_7e3741e3bb8ea6dd609ac451eda75f41);\n",
+       "            ).addTo(map_db836188a7f065b2c38e97d0546e9fbb);\n",
        "        \n",
        "    \n",
-       "        var popup_22864470ad3455e8f8410b20dd6c1e6f = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_1e5873cbbbac10aa6f9f430acbb731c4 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_52b857ee908628614a079da732747a2a = $(`&lt;div id=&quot;html_52b857ee908628614a079da732747a2a&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_22864470ad3455e8f8410b20dd6c1e6f.setContent(html_52b857ee908628614a079da732747a2a);\n",
+       "                var html_9a7b10a0d8d6b38a26f32aea069d8e45 = $(`&lt;div id=&quot;html_9a7b10a0d8d6b38a26f32aea069d8e45&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_1e5873cbbbac10aa6f9f430acbb731c4.setContent(html_9a7b10a0d8d6b38a26f32aea069d8e45);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_66c51bfc8a0e0ce3b74cc4da3f0e58ba.bindPopup(popup_22864470ad3455e8f8410b20dd6c1e6f)\n",
+       "        marker_a63b28d147b26f7bea724448a88c3da8.bindPopup(popup_1e5873cbbbac10aa6f9f430acbb731c4)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -196,7 +196,7 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x17d5703e9d0>"
+       "<folium.folium.Map at 0x1c9819b2710>"
       ]
      },
      "execution_count": 3,
@@ -412,13 +412,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a2c97adad834f4fb5fb8382535e3a2b",
+       "model_id": "b89169ceaaec4ce3affe51d3f167fca1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +426,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2900fd0e4bca422da06319048f0d926f",
+       "model_id": "f964ea7f9ce94f7e83e6b161a9d4b450",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,13 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca5621de648544b4b0a7d1d5cd6eba3a",
+       "model_id": "8f5281fc2bbb40ec9c04cd9643f356f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,7 +483,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a670339ee9c842cfb676f9c9c552001c",
+       "model_id": "c52ab0769af54d70ad21a955f8967383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17e88ce33fba4078bdaa88b8a9f1c06b",
+       "model_id": "d5e75be77f3c401c8573338bcbdcd716",
        "version_major": 2,
        "version_minor": 0
       },
@@ -636,7 +636,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -984,6 +984,75 @@
     "    plt.subplot(1,3,3)\n",
     "\n",
     "    #plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reading swissBUILDINGS3D/1052-11/models/model_2045.dae\n",
+      "Writing swissBUILDINGS3D/1052-11/models/model_2045.egg\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dae_file = \"swissBUILDINGS3D\\\\\"+kml+\"\\\\models\\\\\"+model\n",
+    "egg_file = \"swissBUILDINGS3D\\\\\"+kml+\"\\\\models\\\\\"+model.split(\".\")[0]+\".egg\"\n",
+    "!\"C:\\Panda3D-1.10.14-x64\\bin\\dae2egg.exe\" -o {egg_file} {dae_file}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\chu\\Documents\\Studium\\Bachelorarbeit\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from panda3d.core import loadPrcFileData, Texture\n",
+    "from direct.showbase.ShowBase import ShowBase\n",
+    "\n",
+    "class MyApp(ShowBase):\n",
+    "    def __init__(self):\n",
+    "        ShowBase.__init__(self)\n",
+    "        \n",
+    "        self.building = self.loader.loadModel(egg_file)\n",
+    "        self.building.reparentTo(self.render)\n",
+    "        # Move and scale your model if necessary\n",
+    "        self.building.setScale(1)\n",
+    "        self.building.setPos(0, 0, 0)\n",
+    "\n",
+    "        self.cam.setPos(0, -10, 0)\n",
+    "        self.cam.lookAt(0, 0, 0)\n",
+    "\n",
+    "        #texture = self.loader.loadTexture(\".\\\\swissImage\\\\\"+aerial_image)\n",
+    "        #self.building.setTexture(texture, 1)\n",
+    "\n",
+    "app = MyApp()\n",
+    "app.run()\n"
    ]
   }
  ],
